# human-dynamics-estimation

app/icubTeleoperationModels/teleoperation_iCub_model_V_2_5/: teleoperation_iCub_model_V_2_5.urdf
app/ros/launch/: HDERviz.launch
app/xml/: HumanStateProvider_icub_V_2_5.xml
conf/: CMakeLists.txt
conf/ros/launch/: HDERviz.launch  baxterRviz.launch  naoRviz.launch  walkmanRviz.launch
conf/ros/rviz/: baxterRviz.rviz  naoRviz.rviz  walkmanRviz.rviz
conf/urdfs/: humanSubject03_66dof.urdf
conf/xml/: Human.xml  HumanStateProvider.xml  HumanStateProvider_icub_V_2_5.xml  RobotStateProvider.xml  RobotStateProvider_Atlas.xml  RobotStateProvider_Baxter.xml  RobotStateProvider_NAO.xml  RobotStateProvider_Walkman.xml  pHRI.xml
devices/: CMakeLists.txt
devices/HumanStateProvider/: CMakeLists.txt  HumanIKWorkerPool.cpp  HumanIKWorkerPool.h  HumanStateProvider.cpp  HumanStateProvider.h.autosave
devices/HumanStateProvider/InverseVelocityKinematics/: InverseVelocityKinematics.cpp
devices/HumanStateProvider/tests/: CMakeLists.txt  ipopt-test.cpp
devices/RobotPositionController/: RobotPositionController.cpp  RobotPositionController.h  robotpositioncontroller.xml
devices/Utilities/: CMakeLists.txt
devices/XsensHumanStateProvider/: XsensHumanStateProvider.cpp
human-viz-bridge/: CMakeLists.txt
human-viz-bridge/human-viz-bridge-ros/: CMakeLists.txt  package.xml
human-viz-bridge/human-viz-bridge-ros/launch/: displayHumanRobot.launch  displayIK.launch  displayTF.launch
human-viz-bridge/human-viz-bridge-ros/src/: human-viz-bridge-ros.cpp
human-viz-bridge/human-viz-bridge-yarp/: CMakeLists.txt
wrappers/HumanStateWrapper/: HumanStateWrapper.cpp
